--- a/postgres/etc-crond-postgresql-backup.j2
+++ b/postgres/etc-crond-postgresql-backup.j2
@@ -4,7 +4,7 @@ NOW=$(date +%Y%m%d%H%M%S)
 POSTGRESQL_BACKUP=${NOW}_{{ ansible_hostname }}.pgdump.gz
 
 /usr/bin/pg_dumpall | gzip -c > {{ postgresql_backup_dir }}/${POSTGRESQL_BACKUP}
-{{ azcopy_bin_path }}/azcopy copy {{ postgresql_backup_dir }}/${POSTGRESQL_BACKUP} "{{ storage_resource_uri }}/${POSTGRESQL_BACKUP}?{{ blob_sas_token }}"
+{{ azcopy_bin_path }}/azcopy copy "{{ postgresql_backup_dir }}/${POSTGRESQL_BACKUP}" "{{ storage_resource_uri }}/${POSTGRESQL_BACKUP}?{{ blob_sas_token }}"
 
 # Remove backup files that are 3 month old
 rm -f {{ postgresql_backup_dir }}/$(date +%Y%m%d* --date='3 month ago')_{{ ansible_hostname }}.pgdump.gz
